update KPI ranges in Switch Dashboard
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39766

--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -78,7 +78,7 @@
                                          datasource="scopeModel.topSuppliers">
                                 <vr-datagridcolumn headertext="'Supplier Name'" field="'SupplierName'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'% Connected'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" getcolor="scopeModel.getColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" getcolor="scopeModel.getACDColor"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
                             </vr-datagrid>
