--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierPricelist/Templates/SupplierPricelistGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierPricelist/Templates/SupplierPricelistGridTemplate.html
@@ -4,7 +4,7 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Entity.PriceListId"
-             defaultsortbyfieldname="'Entity.CreateTime'" defaultsortdirection="'DESC'">
+             defaultsortbyfieldname="'Entity.CreateTime'" defaultsortdirection="'DESC'" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Supplier'" field="'SupplierName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreateTime'" type="'Datetime'"></vr-datagridcolumn>
