--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierZoneService/Templates/SupplierZoneServiceGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierZoneService/Templates/SupplierZoneServiceGridTemplate.html
@@ -2,8 +2,7 @@
              on-ready="onGridReady"
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
-             menuactions="gridMenuActions"
-              >
+             menuactions="gridMenuActions" enableautoexport="true">
     <!--<vr-datagridcolumn headertext="'ID'" field="'Entity.SupplierZoneServiceId'" type="'Text'"></vr-datagridcolumn>-->
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Services'" field="'Services'" disablesorting>
