--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -1,7 +1,7 @@
 ﻿<vr-panel ng-controller="NP_IVSwitch_SwitchDashboardManagementController" vr-loader="scopeModel.isLoading">
     <vr-form name="formFilter">
         <vr-row removeline>
-            <vr-columns colnum="6">
+            <vr-columns colnum="6" grouped>
                 <vr-section title="Connected / Attempts" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="2" haschildcolumns>
@@ -17,7 +17,7 @@
                 </vr-section>
             </vr-columns>
 
-            <vr-columns colnum="6">
+            <vr-columns colnum="6" grouped>
                 <vr-section title="Duration" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="2" haschildcolumns>
@@ -35,7 +35,7 @@
             </vr-columns>
         </vr-row>
         <vr-row removeline>
-            <vr-columns colnum="8">
+            <vr-columns colnum="8" grouped>
                 <vr-section title="Top Customers" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="6">
@@ -54,7 +54,7 @@
                     </vr-row>
                 </vr-section>
             </vr-columns>
-            <vr-columns colnum="4">
+            <vr-columns colnum="4" grouped>
                 <vr-section title="Duration Distribution (min)" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="12">
@@ -66,7 +66,7 @@
         </vr-row>
         <vr-row removeline>
 
-            <vr-columns colnum="8">
+            <vr-columns colnum="8" grouped>
                 <vr-section title="Top Suppliers" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="6">
@@ -86,7 +86,7 @@
                     </vr-row>
                 </vr-section>
             </vr-columns>
-            <vr-columns colnum="4">
+            <vr-columns colnum="4" grouped>
                 <vr-section title="Top Destinations" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="12">
@@ -95,7 +95,6 @@
                     </vr-row>
                 </vr-section>
             </vr-columns>
-
         </vr-row>
     </vr-form>
 </vr-panel>
