--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/RepeatedNumber/Templates/RepeatedNumberGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/RepeatedNumber/Templates/RepeatedNumberGridTemplate.html
@@ -6,12 +6,12 @@
                  pagingtype="'PagingOnScroll'"
                  idfield="Entity.Attempt"
                  defaultsortbyfieldname="'Entity.Attempt'"
-                 defaultsortdirection="'DESC'">
+                 defaultsortdirection="'DESC'" enableautoexport="true">
         <vr-datagridcolumn widthfactor="5" headertext="'Customer'" field="'CustomerName'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn widthfactor="5" headertext="'Supplier'" field="'SupplierName'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn widthfactor="5" headertext="'Zone'" field="'SaleZoneName'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn widthfactor="5" headertext="'Attempts'" field="'Entity.Attempt'" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
-        <vr-datagridcolumn widthfactor="5" headertext="'Duration (min)'" field="'Entity.DurationInMinutes'" type="'Number'" ></vr-datagridcolumn>
+        <vr-datagridcolumn widthfactor="5" headertext="'Duration (min)'" field="'Entity.DurationInMinutes'" type="'Number'"></vr-datagridcolumn>
         <vr-datagridcolumn widthfactor="5" headertext="'Phone Number'" field="'Entity.PhoneNumber'" type="'Text'"></vr-datagridcolumn>
     </vr-datagrid>
 </div>
