fix grouped columns attribute option to benefit more space
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39794

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -2620,7 +2620,7 @@ vr-tab vr-columns[tabs="true"] > div[class^="col"] {
 }
 
 vr-columns[grouped] > div[class^="col"] {   
-    margin: 0px -12px;
+    padding: 0px 3px;
 }
 
 @media (max-width: 992px ) {
