git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39795

--- a/Demo.project/Code/Demo.Module.Web/Demo_Module/Directives/User/templates/UserGridTemplate.html
+++ b/Demo.project/Code/Demo.Module.Web/Demo_Module/Directives/User/templates/UserGridTemplate.html
@@ -6,6 +6,7 @@
              idfield="Entity.Id" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.Id'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'User Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'City Name'" field="'CityName'" type="'Text'"></vr-datagridcolumn>
 
 
 </vr-datagrid>
