--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3095,12 +3095,15 @@ vr-overall-widget  .list-group-item {
 }
 .overallwidget {
     height:120px;
-    width:120px;
-    background-color: #7CB5EC;    
+    width:120px; 
     text-align:center;
     color:#fff;
     font-weight:bold;
     border-radius: 4px;
+    display:block !important;
+}
+.overallwidget.default {
+    background-color: #7CB5EC; 
 }
 .overallwidget-value{
     height:75%;
