--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/Reports/ITPC/InvoiceReportByCurrency.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/Reports/ITPC/InvoiceReportByCurrency.rdlc
@@ -208,7 +208,7 @@
         <Source>Database</Source>
         <Value>=Parameters!Image.Value</Value>
         <MIMEType>image/png</MIMEType>
-        <Sizing>Fit</Sizing>
+        <Sizing>FitProportional</Sizing>
         <Top>0.19097in</Top>
         <Left>0.1425in</Left>
         <Height>0.79514in</Height>
