--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/ScheduleTask/Templates/BuildRouteTaskTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/ScheduleTask/Templates/BuildRouteTaskTemplate.html
@@ -1,13 +1,20 @@
 ﻿<vr-row>
-    <vr-columns width="1/2row">
+    <vr-columns width="1/3row">
         <vr-select datatextfield="description" datavaluefield="value" label="Routing Database Type" datasource="routingDatabaseTypes"
-                   selectedvalues="selectedRoutingDatabaseType" onselectionchanged="onRoutingDatabaseTypeSelectionChanged" hideremoveicon />
+                   selectedvalues="selectedRoutingDatabaseType" onselectionchanged="onRoutingDatabaseTypeSelectionChanged" hideremoveicon>
+        </vr-select>
     </vr-columns>
-
-    <vr-columns width="1/2row">
+    <vr-columns width="1/3row">
+        <vr-textbox value="effectiveAfterInMinutes"
+                    label="Effective After (Min)" type="number"
+                    minvalue="0" decimalprecision="0" isrequired="true">
+        </vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/3row">
         <vr-switch value="storeCodeMatches" label="Store Code Matches" isrequired></vr-switch>
     </vr-columns>
 </vr-row>
+
 <vr-row ng-show="!isFuture">
     <vr-columns width="fullrow">
         <vr-section title="Route Sync">
